--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,3 +9,13 @@ services:
       - ./.env
     ports:
       - 3307:3306
+  
+  app:
+    build: ./
+    restart: always
+    env_file:
+      - ./.env
+    ports:
+      - 3001:3001
+    depends_on:
+      - db
