--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "mysql2": "^3.10.0",
         "socket.io": "^4.7.5"
     }
 }
