--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,11 +10,14 @@ COPY package*.json ./
 # Install the application's dependencies in the Docker image
 RUN npm install
 
+# Install nodemon globally
+RUN npm install -g nodemon
+
 # Copy the rest of the application's source code to the working directory
 COPY . .
 
 # Expose port 3001 in the Docker image
 EXPOSE 3001
 
-# Define the command to run the application
-CMD [ "node", "server-socket.js" ]
+# Define the command to run the application with nodemon
+CMD ["nodemon", "server-socket.js"]
