--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,17 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Angular client image
         working-directory: ./client
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.CLIENT_IMAGE }}:prod .
+        if: success()
 
       - name: Push Angular client image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.CLIENT_IMAGE }}:prod
+        if: success()
 
   build-and-push-server:
     runs-on: ubuntu-latest
@@ -36,15 +38,17 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Laravel server image
         working-directory: ./server
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.SERVER_IMAGE }}:prod .
+        if: success()
 
       - name: Push Laravel server image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.SERVER_IMAGE }}:prod
+        if: success()
 
   deploy-to-vultr:
     runs-on: ubuntu-latest
@@ -65,3 +69,4 @@ jobs:
             docker-compose down
             docker-compose pull
             docker-compose up --build -d
+        if: success()
