--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
 
   build-and-push-server:
     runs-on: ubuntu-latest
+    needs: build-and-push-client
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -38,7 +39,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Laravel server image
         working-directory: ./server
@@ -52,7 +53,7 @@ jobs:
 
   deploy-to-vultr:
     runs-on: ubuntu-latest
-    needs: [build-and-push-client, build-and-push-server]
+    needs: build-and-push-server
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
