--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -63,10 +63,11 @@ COPY init-laravel.sh /usr/local/bin/init-laravel.sh
 RUN chmod +x /usr/local/bin/init-laravel.sh
 
 # Create the storage directories with correct permissions
-RUN mkdir -p /var/www/html/storage/framework/{sessions,views,cache} && \
+RUN mkdir -p /var/www/html/storage/framework/sessions && \
+    mkdir -p /var/www/html/storage/framework/views && \
+    mkdir -p /var/www/html/storage/framework/cache && \
     chmod -R 775 /var/www/html/storage && \
     chown -R www-data:www-data /var/www/html/storage
-
 
 # Expose ports
 EXPOSE 9000
